--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ethers": "^5.5.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.0",
     "graphql": "^15.5.3",
