--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon prod",
+    "start": "npm run start:dev",
     "start:dev": "nodemon dev",
     "start:devssl": "nodemon devssl",
     "start:prod": "nodemon prod",
