--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "src/index.ts",
   "scripts": {
-    "start": "npm run start:dev",
+    "start": "ts-node ./src/index.ts",
     "start:dev": "nodemon dev",
     "start:devssl": "nodemon devssl",
     "start:prod": "nodemon prod",
@@ -35,6 +35,7 @@
     "ethers": "^5.5.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.0",
+    "global": "^4.4.0",
     "graphql": "^15.5.3",
     "graphql-request": "^3.5.0",
     "helmet": "^4.6.0",
@@ -50,6 +51,7 @@
     "routing-controllers": "^0.9.0",
     "sanitize-html": "^2.4.0",
     "ts-node": "^10.1.0",
+    "tsc": "^2.0.3",
     "typescript": "^4.3.5",
     "web3": "^1.3.3"
   },
